--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "modules/Piton"]
 	path = modules/Piton
-	url = git://git@github.com/PabloSerbo/Piton.git
+	url = git://github.com/PabloSerbo/Piton.git
